Moving the migration to a custom handler + Deactivating superfluous seed controller
