# packages/optimise-core/docs/swagger.json
@@ -4320,169 +4320,6 @@
           }
         }
       }
-    },
-    "/seeds": {
-      "get": {
-        "summary": "Get seeds",
-        "description": "Get all seeds",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "example": [
-                "fieldVisit",
-                "fieldTest",
-                "fieldCE",
-                "typeVisit",
-                "typeCE",
-                "typeTest"
-              ],
-              "items": {
-                "type": "string"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/seeds/{target}": {
-      "get": {
-        "summary": "Get seeds",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "target",
-            "type": "string",
-            "required": true,
-            "enum": [
-              "fieldVisit",
-              "fieldTest",
-              "fieldCE",
-              "typeVisit",
-              "typeCE",
-              "typeTest"
-            ]
-          },
-          {
-            "in": "query",
-            "name": "id",
-            "type": "integer",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "definition",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "idname",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "section",
-            "type": "integer",
-            "required": false,
-            "enum": [
-              1,
-              2,
-              3,
-              4
-            ]
-          },
-          {
-            "in": "query",
-            "name": "subsection",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "type",
-            "type": "integer",
-            "required": false,
-            "enum": [
-              1,
-              2,
-              3,
-              4,
-              5,
-              6,
-              7
-            ]
-          },
-          {
-            "in": "query",
-            "name": "unit",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "module",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "permittedValues",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "labels",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "referenceType",
-            "type": "integer",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "laterality",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "cdiscName",
-            "type": "string",
-            "required": false
-          },
-          {
-            "in": "query",
-            "name": "name",
-            "type": "string",
-            "required": false,
-            "description": "Relevant for targets typeVisit, typeCE and typeTest"
-          }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK.",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Fields"
-              }
-            }
-          }
-        }
-      }
     }
   },
   "definitions": {
